force-app/main/default/objects/Opportunity/fields/Joint_Salesforce_ACV__c.field-meta.xml
<CustomField>
    <fullName>Joint_Salesforce_ACV__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this will be counted as joint sales ACV with Salesforce.</description>
    <inlineHelpText>Check if true</inlineHelpText>
    <label>Joint Salesforce ACV?</label>
    <type>Checkbox</type>
</CustomField>