force-app/main/default/objects/Opportunity/fields/Lead_Class__c.field-meta.xml
<CustomField>
    <fullName>Lead_Class__c</fullName>
    <label>Lead Class</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Event</fullName>
                <color>#0B6FCE</color>
                <label>Event</label>
            </value>
            <value>
                <fullName>Referral</fullName>
                <color>#78C953</color>
                <label>Referral</label>
            </value>
            <value>
                <fullName>Inbound</fullName>
                <color>#E27001</color>
                <label>Inbound</label>
            </value>
            <value>
                <fullName>Outbound</fullName>
                <color>#A845DC</color>
                <label>Outbound</label>
            </value>
            <value>
                <fullName>Search</fullName>
                <color>#F3D904</color>
                <label>Search</label>
            </value>
            <value>
                <fullName>Channel</fullName>
                <color>#A53711</color>
                <label>Channel</label>
            </value>
            <value>
                <fullName>Sales</fullName>
                <color>#66E9BD</color>
                <label>Sales</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>