force-app/main/default/objects/Opportunity/fields/Lead_Created_Date__c.field-meta.xml
<CustomField>
    <fullName>Lead_Created_Date__c</fullName>
    <description>The date the lead was created.</description>
    <inlineHelpText>This is the date the lead was created.</inlineHelpText>
    <label>Lead Created Date</label>
    <type>Date</type>
</CustomField>