force-app/main/default/objects/Opportunity/fields/Lead_Family__c.field-meta.xml
<CustomField>
    <fullName>Lead_Family__c</fullName>
    <label>Lead Family</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Content</fullName>
            </value>
            <value>
                <fullName>Events: 7Summits</fullName>
            </value>
            <value>
                <fullName>Events: Salesforce</fullName>
            </value>
            <value>
                <fullName>Landing Pages</fullName>
            </value>
            <value>
                <fullName>Lists purchased</fullName>
            </value>
            <value>
                <fullName>Organic search</fullName>
            </value>
            <value>
                <fullName>Paid Search</fullName>
            </value>
            <value>
                <fullName>Tradeshow</fullName>
            </value>
            <value>
                <fullName>Referral</fullName>
            </value>
            <value>
                <fullName>Channel</fullName>
            </value>
            <value>
                <fullName>Accounts</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>