force-app/main/default/objects/Opportunity/fields/Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lead_Source_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The campaign name associated with the Opportunity.</description>
    <inlineHelpText>Add the campaign name associated with the Opportunity. SEARCH 2018 TO VIEW ALL CAMPAIGNS.</inlineHelpText>
    <label>Lead Source Detail</label>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>