force-app/main/default/objects/Opportunity/fields/Leadership_Notes__c.field-meta.xml
<CustomField>
    <fullName>Leadership_Notes__c</fullName>
    <description>Part of Selling Through Curiosity</description>
    <inlineHelpText>Managers will put in their coaching notes and developing questions.</inlineHelpText>
    <label>Leadership Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>