force-app/main/default/objects/Opportunity/fields/Legal_Process_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Legal_Process_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Step 3 of 4</description>
    <inlineHelpText>Proposed Step 3 of 4</inlineHelpText>
    <label>Retired - Legal Process Initiated</label>
    <type>Checkbox</type>
</CustomField>