force-app/main/default/objects/Opportunity/fields/Link_to_Final_Executed_SOW_PDF__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Final_Executed_SOW_PDF__c</fullName>
    <inlineHelpText>If LOI, please provide the google document to the executed document here. If the client only provides a PO upon signature, please provide a link to google document  here.</inlineHelpText>
    <label>Link to Final Executed SOW (PDF)</label>
    <type>Url</type>
</CustomField>