force-app/main/default/objects/Opportunity/fields/Loaded_in_FF__c.field-meta.xml
<CustomField>
    <fullName>Loaded_in_FF__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Project Created - - &gt; box checked on opportunity</description>
    <inlineHelpText>If checked, EWB has been loaded and Project has been created.</inlineHelpText>
    <label>Loaded in FF</label>
    <type>Checkbox</type>
</CustomField>