force-app/main/default/objects/Opportunity/fields/LOEApproved__c.field-meta.xml
<CustomField>
    <fullName>LOEApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>LOE Approved</label>
    <type>Checkbox</type>
</CustomField>