force-app/main/default/objects/Opportunity/fields/Loss_Detail__c.field-meta.xml
<CustomField>
    <fullName>Loss_Detail__c</fullName>
    <label>Loss Detail</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <controllingField>Loss_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Cost</fullName>
            </value>
            <value>
                <fullName>Change in Stakeholder</fullName>
            </value>
            <value>
                <fullName>Timing/Staffing</fullName>
            </value>
            <value>
                <fullName>Expertise Mismatch</fullName>
            </value>
            <value>
                <fullName>Incumbent Selected</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>