force-app/main/default/objects/Opportunity/fields/Loss_Reason__c.field-meta.xml
<CustomField>
    <fullName>Loss_Reason__c</fullName>
    <description>For a &apos;Closed Lost&apos; opportunity, a reason must be selected</description>
    <inlineHelpText>For a &apos;Closed Lost&apos; opportunity, a reason must be selected</inlineHelpText>
    <label>Loss Reason</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Lost to Competitor</fullName>
            </value>
            <value>
                <fullName>No Decision</fullName>
            </value>
            <value>
                <fullName>Included in separate SOW</fullName>
            </value>
            <value>
                <fullName>Salesforce Platform Loss</fullName>
            </value>
            <value>
                <fullName>Project Deprioritized</fullName>
            </value>
            <value>
                <fullName>Chose Internal Resources</fullName>
            </value>
            <value>
                <fullName>Walk Away</fullName>
            </value>
            <value>
                <fullName>Legacy</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>