force-app/main/default/objects/Opportunity/fields/Lost_Detail__c.field-meta.xml
<CustomField>
    <fullName>Lost_Detail__c</fullName>
    <description>Provide further explanation to the reason the opportunity was lost.</description>
    <inlineHelpText>Provide further explanation to the reason the opportunity was lost.</inlineHelpText>
    <label>Lost Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>