force-app/main/default/objects/Opportunity/fields/Loyalty_Gift_Sent__c.field-meta.xml
<CustomField>
    <fullName>Loyalty_Gift_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This box is checked when the gift is sent.</description>
    <inlineHelpText>This box is checked when the gift is sent.</inlineHelpText>
    <label>Loyalty Gift Sent</label>
    <type>Checkbox</type>
</CustomField>