force-app/main/default/objects/Opportunity/fields/Month_Won__c.field-meta.xml
<CustomField>
    <fullName>Month_Won__c</fullName>
    <formula>MONTH( CloseDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Month Won</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>