force-app/main/default/objects/Opportunity/fields/Needs__c.field-meta.xml
<CustomField>
    <fullName>Needs__c</fullName>
    <description>NASCAR - Needs</description>
    <inlineHelpText>What are the customers needs? (e.g Intranet/Extranet for employee &amp; customer collaboration)</inlineHelpText>
    <label>Ret&apos;d 6-10-2016 Needs for NASCAR</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>