force-app/main/default/objects/Opportunity/fields/netsuite_conn__Celigo_Contract__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Celigo_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is just to get data from NetSuite and then put into standard Contract field. It is needed because standard Contract field isn&apos;t accessible from API so NetSuite can&apos;t cache it.</description>
    <label>Celigo Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Celigo Opportunities</relationshipLabel>
    <relationshipName>Celigo_Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>