force-app/main/default/objects/Opportunity/fields/netsuite_conn__Celigo_Contract_Id_for_Upsell__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Celigo_Contract_Id_for_Upsell__c</fullName>
    <formula>VALUE(netsuite_conn__Celigo_Contract__r.netsuite_conn__NetSuite_Id__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Celigo Contract Id for Upsell</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>