force-app/main/default/objects/Opportunity/fields/netsuite_conn__Distributor__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Distributor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Distributor</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.netsuite_conn__Channel_Tier__c</field>
            <operation>equals</operation>
            <value>Distributor</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Distributor)</relationshipLabel>
    <relationshipName>Opportunities2</relationshipName>
    <type>Lookup</type>
</CustomField>