force-app/main/default/objects/Opportunity/fields/netsuite_conn__Eligible_Account_For_Channel_Sales__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Eligible_Account_For_Channel_Sales__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Eligible Account For Channel Sales</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>ChannelSales</relationshipName>
    <type>Lookup</type>
</CustomField>