force-app/main/default/objects/Opportunity/fields/netsuite_conn__End_Date__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__End_Date__c</fullName>
    <label>End Date</label>
    <type>Date</type>
</CustomField>