force-app/main/default/objects/Opportunity/fields/netsuite_conn__From_Contract__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__From_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>From Contract</label>
    <referenceTo>Contract</referenceTo>
    <relationshipLabel>Opportunities (From Contract)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>