force-app/main/default/objects/Opportunity/fields/netsuite_conn__From_Contract_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__From_Contract_Read_Only__c</fullName>
    <formula>netsuite_conn__From_Contract__r.ContractNumber</formula>
    <label>From Contract</label>
    <type>Text</type>
</CustomField>