force-app/main/default/objects/Opportunity/fields/netsuite_conn__Order_Type_Read_Only__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Order_Type_Read_Only__c</fullName>
    <formula>TEXT(netsuite_conn__Order_Type__c)</formula>
    <label>Order Type</label>
    <type>Text</type>
</CustomField>