force-app/main/default/objects/Opportunity/fields/netsuite_conn__Originated_From_NetSuite__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Originated_From_NetSuite__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If true, then don&apos;t create a Sales Order back in NetSuite.</description>
    <label>Originated From NetSuite</label>
    <type>Checkbox</type>
</CustomField>