force-app/main/default/objects/Opportunity/fields/netsuite_conn__Push_as_NetSuite_Project__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Push_as_NetSuite_Project__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Push As NetSuite Project</label>
    <type>Checkbox</type>
</CustomField>