force-app/main/default/objects/Opportunity/fields/netsuite_conn__Reseller__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Reseller__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Reseller</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.netsuite_conn__Channel_Tier__c</field>
            <operation>equals</operation>
            <value>Reseller</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Opportunities (Reseller)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>