force-app/main/default/objects/Opportunity/fields/netsuite_conn__Terms__c.field-meta.xml
<CustomField>
    <fullName>netsuite_conn__Terms__c</fullName>
    <formula>IF(CONTAINS(TEXT(netsuite_conn__Order_Type__c), &apos;Contract - New&apos;) ,((((netsuite_conn__End_Date__c -  netsuite_conn__Start_Date__c)) * 12)/365),((((netsuite_conn__End_Date__c -  netsuite_conn__Start_Date__c) + 1) * 12)/365))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Terms [Delete]</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>