force-app/main/default/objects/Opportunity/fields/New_at_Close__c.field-meta.xml
<CustomField>
    <fullName>New_at_Close__c</fullName>
    <formula>IF(MONTH(CloseDate) - MONTH(Account.Date_of_1st_Won_Opp__c) &lt; 3, true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>New at Close</label>
    <type>Checkbox</type>
</CustomField>