force-app/main/default/objects/Opportunity/fields/Official_Estimating_Workbook__c.field-meta.xml
<CustomField>
    <fullName>Official_Estimating_Workbook__c</fullName>
    <inlineHelpText>Link to the official estimating workbook for this opportunity</inlineHelpText>
    <label>Official Estimating Workbook</label>
    <type>Url</type>
</CustomField>