force-app/main/default/objects/Opportunity/fields/Opp_Hierarchy_Status__c.field-meta.xml
<CustomField>
    <fullName>Opp_Hierarchy_Status__c</fullName>
    <formula>IF(
OR(
ISPICKVAL(Project_Type__c,&quot;New Project&quot;),
ISPICKVAL(Project_Type__c,&quot;Customer Success&quot;)), &quot;Parent Opportunity&quot;,
IF(
ISPICKVAL(Project_Type__c, &quot;Change Order&quot;), &quot;Child Opportunity&quot;,
&quot;None&quot;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opp Hierarchy Status</label>
    <type>Text</type>
</CustomField>