force-app/main/default/objects/Opportunity/fields/Opportunity_Duration__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Duration__c</fullName>
    <formula>CloseDate - DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Duration</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>