force-app/main/default/objects/Opportunity/fields/Opportunity_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Hierarchy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity Hierarchy</label>
    <referenceTo>Opportunity_Hierarchy__c</referenceTo>
    <relationshipLabel>Opportunities (Opportunity Hierarchy)</relationshipLabel>
    <relationshipName>Opportunities1</relationshipName>
    <type>Lookup</type>
</CustomField>