force-app/main/default/objects/Opportunity/fields/Opportunity_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Name__c</fullName>
    <description>For Opportunity Brief</description>
    <formula>Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This field is auto-populated from Opportunity</inlineHelpText>
    <label>Opportunity Name</label>
    <type>Text</type>
</CustomField>