force-app/main/default/objects/Opportunity/fields/Opportunity_Owner_Team__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Owner_Team__c</fullName>
    <formula>Text(Owner.Team_Name__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Opportunity Owner Team</label>
    <type>Text</type>
</CustomField>