force-app/main/default/objects/Opportunity/fields/Ops_Staffing_Stage__c.field-meta.xml
<CustomField>
    <fullName>Ops_Staffing_Stage__c</fullName>
    <description>Where we are in the staffing motion.</description>
    <formula>Text ( pse__Primary_Project__r.Ops_Staffing_Stage__c )</formula>
    <inlineHelpText>Ops Only Field &gt; where we are with staffing new opportunities</inlineHelpText>
    <label>Ops Staffing Stage</label>
    <type>Text</type>
</CustomField>