force-app/main/default/objects/Opportunity/fields/Parent_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Parent_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Opportunity</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>$Source.AccountId</field>
            <operation>equals</operation>
            <valueField>Opportunity_Hierarchy__c.Parent_Opportunity__r.AccountId</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Opportunity_Hierarchy__c</referenceTo>
    <relationshipLabel>Child Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>