force-app/main/default/objects/Opportunity/fields/Parent_Project__c.field-meta.xml
<CustomField>
    <fullName>Parent_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This is the Project associated with the Parent Opportunity.</description>
    <inlineHelpText>This is the Project associated with the Parent Opportunity.</inlineHelpText>
    <label>Parent Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Opportunities (Parent Project)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>