force-app/main/default/objects/Opportunity/fields/Predicted_Amount_If_Closed_Won__c.field-meta.xml
<CustomField>
    <fullName>Predicted_Amount_If_Closed_Won__c</fullName>
    <label>Predicted Amount If Closed Won</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>