force-app/main/default/objects/Opportunity/fields/Prior_Amount_Value__c.field-meta.xml
<CustomField>
    <fullName>Prior_Amount_Value__c</fullName>
    <description>This is the amount the opportunity was at before it was changed.</description>
    <inlineHelpText>This is the amount the opportunity was at before it was changed.</inlineHelpText>
    <label>Prior Amount Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>