force-app/main/default/objects/Opportunity/fields/Procurement_Process_Initiated__c.field-meta.xml
<CustomField>
    <fullName>Procurement_Process_Initiated__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Step 4 of 4</description>
    <inlineHelpText>Proposed Step 4 of 4</inlineHelpText>
    <label>Retired - Procurement Process Initiated</label>
    <type>Checkbox</type>
</CustomField>