force-app/main/default/objects/Opportunity/fields/Product_Assessment__c.field-meta.xml
<CustomField>
    <fullName>Product_Assessment__c</fullName>
    <label>Product Assessment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No IP</fullName>
            </value>
            <value>
                <fullName>Potential IP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>