force-app/main/default/objects/Opportunity/fields/Product_Assessment_Reason__c.field-meta.xml
<CustomField>
    <fullName>Product_Assessment_Reason__c</fullName>
    <label>Product Assessment Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>