force-app/main/default/objects/Opportunity/fields/Product_Category__c.field-meta.xml
<CustomField>
    <fullName>Product_Category__c</fullName>
    <description>This field - Product Category - at the Opportunity level was used until 12/31/2015.  After that, &apos;Product Family&apos; began being used in PRODUCTS and this field was no longer used in OPPORTUNITIES.</description>
    <inlineHelpText>This field - Product Category - at the Opportunity level was used until 12/31/2015.  After that, &apos;Product Family&apos; began being used in PRODUCTS and this field was no longer used in OPPORTUNITIES.</inlineHelpText>
    <label>Prod Cat Opps 2009-2015</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Services</fullName>
            </value>
            <value>
                <fullName>Software</fullName>
            </value>
            <value>
                <fullName>Solutions</fullName>
            </value>
            <value>
                <fullName>IP Framework</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>