force-app/main/default/objects/Opportunity/fields/Product_Only_Sub_Total__c.field-meta.xml
<CustomField>
    <fullName>Product_Only_Sub_Total__c</fullName>
    <label>Product Only Sub-Total</label>
    <summarizedField>OpportunityLineItem.TotalPrice</summarizedField>
    <summaryFilterItems>
        <field>OpportunityLineItem.Opp_Prod_Family__c</field>
        <operation>equals</operation>
        <value>Product</value>
    </summaryFilterItems>
    <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>