force-app/main/default/objects/Opportunity/fields/Project_Go_Live_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Go_Live_Date__c</fullName>
    <formula>pse__Primary_Project__r.Go_Live_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Project Go Live Date</label>
    <type>Date</type>
</CustomField>