force-app/main/default/objects/Opportunity/fields/Project_Plan_Sent_Agreed_to_by_Client__c.field-meta.xml
<CustomField>
    <fullName>Project_Plan_Sent_Agreed_to_by_Client__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Proposed Step 1 of 4</description>
    <inlineHelpText>Proposed Step 1 of 4</inlineHelpText>
    <label>Retired - ProjPlan Sent/Agreed by Client</label>
    <type>Checkbox</type>
</CustomField>