force-app/main/default/objects/Opportunity/fields/Project_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Project_Start_Date__c</fullName>
    <description>Starting date of services or solution project, if known.  Start date is not needed for Software deals</description>
    <inlineHelpText>If known.  Start date not need for Software</inlineHelpText>
    <label>Project Start Date</label>
    <type>Date</type>
</CustomField>