force-app/main/default/objects/Opportunity/fields/Project_Type__c.field-meta.xml
<CustomField>
    <fullName>Project_Type__c</fullName>
    <label>Project Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New Project</fullName>
            </value>
            <value>
                <fullName>Change Order</fullName>
            </value>
            <value>
                <fullName>IP Only</fullName>
            </value>
            <value>
                <fullName>Customer Success</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>