force-app/main/default/objects/Opportunity/fields/pse__IsParentOpportunityServices__c.field-meta.xml
<CustomField>
    <fullName>pse__IsParentOpportunityServices__c</fullName>
    <defaultValue>false</defaultValue>
    <label>IsParentOpportunityServices</label>
    <type>Checkbox</type>
</CustomField>