force-app/main/default/objects/Opportunity/fields/pse__PreBilledAmount__c.field-meta.xml
<CustomField>
    <fullName>pse__PreBilledAmount__c</fullName>
    <label>Pre-Billed Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>