force-app/main/default/objects/Opportunity/fields/pse__Primary_Project__c.field-meta.xml
<CustomField>
    <fullName>pse__Primary_Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Project</label>
    <referenceTo>pse__Proj__c</referenceTo>
    <relationshipLabel>Primary Project For Opportunities</relationshipLabel>
    <relationshipName>PrimaryProjectForOpportunities</relationshipName>
    <type>Lookup</type>
</CustomField>