force-app/main/default/objects/Opportunity/fields/Purchased_IP__c.field-meta.xml
<CustomField>
    <fullName>Purchased_IP__c</fullName>
    <description>If IP is part of the sold opportunity, please indicate which products were purchased.</description>
    <inlineHelpText>If IP is part of the sold opportunity, please indicate which products were purchased.</inlineHelpText>
    <label>Purchased IP</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Unmanaged_IP</valueSetName>
    </valueSet>
</CustomField>